# learn-qec

./: .gitattributes  .gitignore  AGENTS.md  README.md  ROADMAP.md
docs/arxiv/: A_Game_of_surface_code-1808.02892v3.md  README.md
docs/learning/: 00-qec-and-surface-code-map.md  README.md
docs/learning/01-minimum-quantum-knowledge/: README.md  questions.md
docs/learning/02-general-qec/: README.md
docs/learning/03-surface-code-patch-game/: README.md  state-injection-check-switch-reference.md  state-injection.md
docs/learning/04-real-surface-code/: README.md
tools/visualization/: generate_stage_1_bloch_visuals.py  generate_stage_2_parity_check_circuit.py  generate_stage_2_repetition_circuit.py  generate_x_error_zz_bloch.py  pyproject.toml
