[project]
name = "learn-qec-visualization"
version = "0.1.0"
description = "Reproducible visual assets for the learn-qec notes"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.9,<4",
    "numpy>=2,<3",
    "qiskit[visualization]~=2.4.0",
    "qutip>=5.2,<6",
]

[tool.uv]
package = false
